--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,13 +5,13 @@ on:
   pull_request:
     branches: [ main, alpha ]
 env:
-  GH_TOKEN: ${{ secrets.main.GH_TOKEN }}
+  GH_TOKEN: ${{ secrets.GH_TOKEN }}
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16.x, 17.x, 18.x]
+        node-version: [16.x, 18.x]
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
