--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,13 @@
-name: test
+name: GITHUB_TOKEN
 on:
   push:
     branches: [main, next]
   pull_request:
     branches: [main, next]
+
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,5 +23,6 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run build --if-present
-      - run: npm test -- --watch=false --browsers=ChromeHeadless
+      - run: npm whoami
+      # - run: npm test -- --watch=false --browsers=ChromeHeadless
       - run: npx semantic-release
