--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
-name: main-deploy
+name: prod-deploy
 on:
   push:
-    branches: [main]
+    branches: [prod]
   pull_request:
-    branches: [main]
+    branches: [prod]
 
 env:
   GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
