--- a/package.json
+++ b/package.json
@@ -79,5 +79,21 @@
   "bugs": {
     "url": "https://github.com/SEJ1991/versioning/issues"
   },
-  "homepage": "https://github.com/SEJ1991/versioning#readme"
+  "homepage": "https://github.com/SEJ1991/versioning#readme",
+  "release": {
+    "branches": [
+      "+([0-9])?(.{+([0-9]),x}).x",
+      "prod",
+      "next",
+      "next-major",
+      {
+        "name": "beta",
+        "prerelease": true
+      },
+      {
+        "name": "alpha",
+        "prerelease": true
+      }
+    ]
+  }
 }
