--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -1,9 +1,10 @@
 name: prod-deploy
 on:
-  push:
-    branches: [prod]
+  # push:
+  #  branches: prod
   pull_request:
-    branches: [prod]
+    branches:
+      - prod
 
 env:
   GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
