--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -3,7 +3,7 @@ on:
   # push:
   #  branches: prod
   pull_request:
-    branches: prod
+    branches: [prod]
 
 env:
   GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
