--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sejin-test",
-  "private": false,
+  "private": true,
   "version": "0.0.2",
   "type": "module",
   "files": [
@@ -69,7 +69,7 @@
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/SEJ1991/versioning.git"
+    "url": "git+https://github.com/SEJ1991/versioning.git"
   },
   "keywords": [
     "test"
