--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/core": "^7.23.9",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "github:semantic-release/github",
+    "@semantic-release/npm": "^11.0.3",
     "@storybook/addon-actions": "^7.6.17",
     "@storybook/addon-essentials": "^7.6.17",
     "@storybook/addon-interactions": "^7.6.17",
