--- a/package.json
+++ b/package.json
@@ -99,20 +99,21 @@
   },
   "plugins": [
     "@semantic-release/commit-analyzer",
-    "@semantic-release/github",
     "@semantic-release/release-notes-generator",
     [
       "@semantic-release/npm",
       {
-        "npmPublish": false,
-        "pkgRoot": "dist"
+        "npmPublish": false
       }
     ],
+    "@semantic-release/github",
     [
       "@semantic-release/git",
       {
-        "assets": "package.json",
-        "message": "chore(release): ${nextRelease.version} [skip ci]\\n\\n${nextRelease.notes}"
+        "assets": [
+          "package.json"
+        ],
+        "message": "chore(release): ${nextRelease.version}\n\n${nextRelease.notes}"
       }
     ]
   ]
