--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -36,3 +36,4 @@ jobs:
       - run: npm run build --if-present
       # - run: npm test -- --watch=false --browsers=ChromeHeadless
       - run: npx semantic-release
+      - run: npm publish
